--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <version>3.10.0</version>
       <scope>test</scope>
     </dependency>
+<dependency>
+    <groupId>org.quartz-scheduler</groupId>
+    <artifactId>quartz</artifactId>
+    <version>2.3.2</version>
+</dependency>
     <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>javax.mail</artifactId>
