--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,30 @@
           <target>8</target>
         </configuration>
       </plugin>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+	<executions>
+	<execution>
+	 <phase>package</phase>
+	 <goals>
+	   <goal>single</goal>
+	</goals>
+        <configuration>
+         <archive>
+	   <manifest>
+		<mainClass>
+			dominio/QueMePongoApp
+		</mainClass>
+	   </manifest>
+	 </archive>
+	<descriptorRefs>
+		<descriptorRef>jar-with-dependencies</descriptorRef>
+	</descriptorRefs>
+        </configuration>
+	</execution>
+      </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
