--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ar.edu.utn.frba.dds</groupId>
-  <artifactId>QMP2021</artifactId>
+  <artifactId>ejercicio</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>QMP2021</name>
+  <name>ejercicio</name>
   <url>https://github.com/dds-utn</url>
 
   <properties>
@@ -37,20 +37,61 @@
       <version>2.3.2</version>
     </dependency>
     <dependency>
-      <groupId>com.sparkjava</groupId>
-      <artifactId>spark-core</artifactId>
-      <version>2.9.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sparkjava</groupId>
-      <artifactId>spark-template-handlebars</artifactId>
-      <version>2.7.1</version>
-    </dependency>
-    <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>javax.mail</artifactId>
        <version>1.6.2</version>
      </dependency>
+
+    <!-- jpa java8 -->
+    <dependency>
+      <groupId>org.uqbar-project</groupId>
+      <artifactId>jpa-java8-extras</artifactId>
+      <version>1.0-alpha-1</version>
+    </dependency>
+
+    <!-- MySql connector -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.25</version>
+    </dependency>
+
+    <!-- Hsqldb -->
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
+      <!-- SPARK Dependencies -->
+
+	<dependency>
+        <groupId>com.sparkjava</groupId>
+        <artifactId>spark-core</artifactId>
+        <version>2.5</version>
+    </dependency>
+    <dependency>
+        <groupId>com.sparkjava</groupId>
+        <artifactId>spark-template-handlebars</artifactId>
+        <version>2.3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.sparkjava</groupId>
+        <artifactId>spark-debug-tools</artifactId>
+        <version>0.5</version>
+    </dependency>
+	<dependency>
+        <groupId>com.github.jknack</groupId>
+        <artifactId>handlebars-helpers</artifactId>
+        <version>4.0.6</version>
+	</dependency>
+
+	<dependency>
+        <groupId>com.github.jknack</groupId>
+        <artifactId>handlebars-humanize</artifactId>
+        <version>4.0.6</version>
+	</dependency>
   </dependencies>
 
   <build>
@@ -147,7 +188,7 @@
          <archive>
 	   <manifest>
 		<mainClass>
-			dominio/QueMePongoApp
+			models/QueMePongoApp
 		</mainClass>
 	   </manifest>
 	 </archive>
